# ask

./: .gitignore  ADR.md  AGENTS.md  CODEBASE.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  install.ps1  install.sh  test_alias  test_alias.rs  test_fences  test_fences.rs  test_fences2  test_fences2.rs  test_fences3  test_fences3.rs  test_fences4.rs  test_inject  test_inject.rs  test_inject2  test_inject2.rs  test_inject3  test_inject3.rs  test_inject4  test_inject4.rs  test_regex.rs  test_strip  test_strip.rs
.github/workflows/: ci.yml  test.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: index.md  rust.md
conductor/tracks/command_optimization_20260119/: index.md  metadata.json  plan.md  spec.md
src/: completions.rs  http.rs  main.rs
src/cli/: mod.rs  parser.rs
src/config/: defaults.rs  loader.rs  mod.rs  thinking.rs
src/context/: manager.rs  mod.rs  storage.rs
src/executor/: injector.rs  mod.rs  runner.rs  safety.rs  safety_check_test.rs
src/output/: colorize.rs  formatter.rs  markdown.rs  mod.rs  spinner.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  traits.rs
src/update/: mod.rs
tests/: discovery_test.rs  history_test.rs  integration_test.rs  ui_test.rs  validation_test.rs
tests/fixtures/: README.md  prompt_scenarios.md
