[package]
name = "ask"
version = "0.20.1"
edition = "2021"
license = "AGPL-3.0"
description = "Ask anything in plain text, get commands or answers instantly. No quotes needed."
repository = "https://github.com/verseles/ask"
authors = ["Verseles"]
keywords = ["cli", "ai", "assistant", "shell", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
hickory-resolver = "0.25"
futures = "0.3"
colored = "2"
indicatif = "0.17"
dirs = "5"
anyhow = "1"
thiserror = "1"
requestty = "0.6"
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
termimad = "0.30"
async-trait = "0.1"
shellexpand = "3"
regex = "1"
arboard = "3"
clap_complete = "4"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
enigo = "0.3"
mouse-keyboard-input = "0.9"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mouse-keyboard-input = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
requestty-ui = "0.6"
